--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">cloud_android_ocr_sdk</string>
+    <string name="app_name">HWModelArtsDemo</string>
     <string name="action_settings">Settings</string>
 
 
